Banner header added, styles, icon and link

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{{ 'main-style.css' |  asset_url }}">
+    <title>iBuy Store</title>
+    {{ content_for_header }}
 </head>
 <body>
-    
+    {% section 'header-banner' %}
+    {{ content_for_layout }}
 </body>
 </html>
