--- a/assets/main-style.css
+++ b/assets/main-style.css
@@ -2,3 +2,17 @@
     margin: 0;
     padding: 0;
 }
+
+.container {
+    max-width: 1200px;
+    border: 1px solid blue;
+    margin: 0 auto;
+}
+
+/********************** Navbar styles **************************/
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
