--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ 'main-style.css' |  asset_url }}">
-    <title>iBuy Store</title>
+    {% comment %} <title>iBuy Store</title> {% endcomment %}
+    <title> {{ page_title }} </title>
     {{ content_for_header }}
 </head>
 <body>
+
     {% section 'header-banner' %}
     {{ content_for_layout }}
+
+    {% comment %} {{ theme.role }} {% endcomment %}
 </body>
 </html>
