--- a/assets/main-style.css
+++ b/assets/main-style.css
@@ -2,10 +2,13 @@
     margin: 0;
     padding: 0;
 }
+:root {
+    --white-color: #F5F5F7;
+    --gray-color: #959595;
+}
 
 .container {
     max-width: 1200px;
-    border: 1px solid blue;
     margin: 0 auto;
 }
 
@@ -15,4 +18,49 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 0px;
 }
+
+.navbar__links a{
+    color: #000;
+    text-decoration: none;
+    margin-right: 10px;
+    font-size: 1.2rem;
+    transition: all .2s;
+}
+
+.navbar__links a:hover {
+    text-decoration: underline;
+    opacity: 50%;
+}
+
+.navbar__links a:active {
+    text-decoration: underline;
+    /* opacity: 50%; */
+}
+
+.navbar__icons {
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+}
+
+/* .navbar__icons span {
+    border: 1px solid green;
+    display: inline-block;
+    width: 50px;
+} */
+
+.navbar__icons_item {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.navbar__icons_item:first-of-type {
+    margin-right: 50px;
+}
+
+.navbar__icons span:last-of-type {
+    width: 40px;
+}
+
