--- a/assets/main-style.css
+++ b/assets/main-style.css
@@ -110,12 +110,12 @@
     width: 27px;
 }
 
-input[type="search"]::-webkit-search-decoration,
+/* input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
     display: none;
-}
+} */
 
 .highlight {
     background-color: #d3d3d3;
