--- a/assets/search.css
+++ b/assets/search.css
@@ -1,5 +1,5 @@
 .search {
-    margin-top: 100px;
+    margin-top: 75px;
 }
 
 .search h1{
@@ -11,25 +11,26 @@
 .searchResult {
     text-align: center;
     font-size: 18px;
+    margin-bottom: 30px;
 }
 
 .results-grid {
-    border: 1px solid green;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 50px;
 }
 
 .productSearch {
-    border: 1px solid red;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     overflow: hidden;
-
+    box-shadow: 5px 10px 20px #959595;
 }
 
 .productSearch__img {
     width: 100%;
     height: 320px;
-    transition: all .2s;
+    transition: all .4s;
 }
 
 .productSearch__img img {
@@ -44,12 +45,14 @@
 
 .productSearch__text {
     padding: 15px 30px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
 }
-
 
 .productSearch__text h3 {
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.1rem;
     margin-bottom: 10px;
 }
 
@@ -63,5 +66,25 @@
 }
 
 .productSearch__text p {
-    opacity: 50%;
+    opacity: 60%;
+}
+
+.productSearch__text-verMas {
+    display: inline-block;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-top: auto;
+    text-decoration: none;
+    text-align: center;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    width: 100%;
+    padding: 10px 10px;
+    border-radius: 7px;
+    color: #000;
+    background-color: rgba(0, 0, 0, 0.1);
+    transition: all .2s;
+}
+
+.productSearch__text-verMas:hover {
+    background-color: rgba(0, 0, 0, 0.20);
 }
